@@ -48,14 +48,7 @@ if (my @devices = detect_devices::probe_category('multimedia/sound')) {
     $in->ask_warn(N("No Sound Card detected!"), 
 			   formatAlaTeX(
                                #-PO: keep the double empty lines between sections, this is formatted a la LaTeX
-                               N("No Sound Card has been detected on your machine. Please verify that a Linux-supported Sound Card is correctly plugged in.
-
-
-You can visit our hardware database at:
-
-
-http://www.mandrivalinux.com/en/hardware.php3") .
-N("\n\n\nNote: if you've an ISA PnP sound card, you'll have to use the alsaconf or the sndconfig program.  Just type \"alsaconf\" or \"sndconfig\" in a console.")));
+                               N("No Sound Card has been detected on your machine. Please verify that a Linux-supported Sound Card is correctly plugged in")));
 }
 
 $modules_conf->write;
