@@ -3,6 +3,8 @@
 - partitioning:
   o auto fill LV name from mntpnt (mga#5407)
   o suggest "lv_foo" instead of just "foo" for LVname
+- summary:
+  o drop support for ISApnp sound cards
 - fix a message (mga#51414)
 - misc cleanups
 
