@@ -5,6 +5,8 @@
 - drakboot:
   o skip swap in the list of partitions (mga#15767)
   o split drakautologin from drakboot (mga#7160)
+- draksound:
+  o drop support for ISApnp sound cards
 
 Version 17.8 - 22 December 2015
 
